# slms_workflow

./: .gitignore  .pre-commit-config.yaml  README.md  SCRATCHPAD.md  TODO.md  false  pyproject.toml  server_config.json
.pi/: mcp.json  settings.json
app/: agent.py  download_models.py  fuzzy.py  llm_client.py  main.py  model_registry.py  ner.py  router.py  schemas.py  scoring.py  tools.py  trace.py  workflow.py
app/handlers/: __init__.py  classification.py  function_calling.py  general.py  image_understanding.py  question_answering.py  summarization.py
app/providers/: openai_local.py
app/tools/: __init__.py  calculator.py  web_search.py
docs/: observability.md
evals/: acceptance.py  compare.py  dataset.py  live.py  metrics.py  quality_gate.py  results.json  runner.py
experiments/: model_candidates.md  server_config.qwen2.5-0.5b.json  server_config.qwen3.5-0.8b.json  server_config.smollm2-360m.json
features/: acceptance.feature  agent.feature  complex_acceptance.feature  environment.py  live_pipeline.feature  unified_assistant.feature  workflows.feature
features/steps/: assertions.py  execution.py  infrastructure.py  live_pipeline_steps.py  steps.py
implementation/: 001-fix-composed-dag-tool-qa-handoff-summary.md  002-add-composed-dag-integration-tests-summary.md
issues/: 001-fix-composed-dag-tool-qa-handoff.md  002-add-composed-dag-integration-tests.md  05-extract-callback-side-effect.md  06-inject-model-profile.md  07-collapse-node-handler-layers.md  08-deduplicate-node-lookup.md  09-extract-llm-construction.md
references/: Qwen2_5_Coder_(1_5B)_Tool_Calling.ipynb
scripts/: run_eval.py
src/: __init__.py  agent.py  bootstrap.py  composer.py  config.py  context.py  dag.py  download_models.py  grounding.py  lexical_scoring.py  llm_client.py  main.py  model_registry.py  ner.py  orchestrator.py  patterns.py  planner.py  rag.py  retrieval.py  router.py  router_prototypes.py  schemas.py  text_normalization.py  text_utils.py  tool_selection.py  trace.py  trace_sink.py  trace_types.py  ui.py  workflow.py
src/graph/: __init__.py  base.py  context.py  dag.py  trace_types.py
src/handlers/: __init__.py  base.py  classification.py  function_calling.py  general.py  image_understanding.py  question_answering.py  summarization.py
src/nodes/: agent_node.py  base.py  classification_node.py  function_calling_node.py  general_node.py  image_understanding_node.py  plugin_node.py  question_answering_node.py  summarization_node.py
src/plugins/: __init__.py  (+3 more)
(+107 files in other folders)
