[project]
name = "workflow-slms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.2",
    "httpx>=0.28.1",
    "huggingface-hub>=1.14.0",
    "llama-cpp-python[server]>=0.3.22",
    "openai>=2.35.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "scikit-learn>=1.6.0",
    "spacy>=3.8.14",
    # RAG dependencies - local, Python-only
    "sentence-transformers>=3.3.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pypdf>=5.1.0",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "ruff>=0.13.1",
    "mlflow>=3.12.0",
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests (no LLM, no network)",
    "integration: requires llama.cpp server at 127.0.0.1:8080",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["references"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
